--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@as-integrations/next": "^2.0.2",
     "@reduxjs/toolkit": "^1.9.7",
     "next": "13.5.4",
     "react": "^18",
