--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
+    "@apollo/server": "^4.9.4",
     "@as-integrations/next": "^2.0.2",
+    "@prisma/client": "^5.4.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "graphql": "^16.8.1",
     "next": "13.5.4",
+    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
